widgets added for ambientmedia and hueplugin

--- a/templates/plugin-listitem.handlebars
+++ b/templates/plugin-listitem.handlebars
@@ -1,6 +1,8 @@
-<ul data-role="listview" data-inset="true">
-	<li data-role="header"> {{accessProfile.name}} </li>
-	<li class="ui-field-contain" id="controls-list">
+<form>
+	<ul data-role="listview" data-inset="true" data-pluginid="{{accessProfile.pluginId}}" class="controls-container">
+		<li data-role="header" data-theme="b"> {{accessProfile.name}} </li>
+		<li class="ui-field-contain controls-list">
 
-	</li>
-</ul>
+		</li>
+	</ul>
+</form>
