made scenes list clickable but untested

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,3 +23,14 @@ html {
       -webkit-align-items: center;
       align-items: center;
 }
+
+.center-wrapper span {
+    vertical-align: middle;
+    line-height: 30px;
+    font-size: 1.5em;
+}
+.center-wrapper img {
+    vertical-align: middle;
+    height: 5em;
+    width: 5em;
+}
