--- a/templates/plugin-listitem.handlebars
+++ b/templates/plugin-listitem.handlebars
@@ -1,6 +1,6 @@
 <form>
 	<ul data-role="listview" data-inset="true" data-pluginid="{{accessProfile.pluginId}}" class="controls-container">
-		<li data-role="header" data-theme="a"> {{accessProfile.name}} </li>
+		<li data-role="header" data-theme="b"> {{accessProfile.name}} </li>
 		<li class="ui-field-contain controls-list">
 
 		</li>
